tests/ui-fulldeps/plugin-args.stderr
error[E0498]: malformed `plugin` attribute
  --> $DIR/plugin-args.rs:5:11
   |
LL | #![plugin(empty_plugin(args))]
   |           ^^^^^^^^^^^^^^^^^^ malformed attribute

warning: use of deprecated attribute `plugin`: compiler plugins are deprecated. See https://github.com/rust-lang/rust/pull/64675
  --> $DIR/plugin-args.rs:5:1
   |
LL | #![plugin(empty_plugin(args))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: may be removed in a future compiler version
   |
   = note: `#[warn(deprecated)]` on by default

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0498`.
